# agentdna

./: .gitignore  CONTRIBUTING.md  LICENSE  POSTS.md  README.md  conftest.py
.github/workflows/: ci.yml  publish.yml
docs/: SPEC.md
examples/: agentdna.yaml  demo.py  simple.py
scripts/: generate_demo_gif.py
src/cli/: main.py
src/dashboard/: __init__.py  app.py
src/dashboard/static/: .gitkeep
src/dashboard/templates/: agent.html  base.html  index.html  search.html
src/plugins/: crewai.py  langchain.py  observe.py
src/registry/: __init__.py  auth.py  server.py  storage.py
src/sandbox/: verifier.py
src/sdk/python/: README.md  pyproject.toml
src/sdk/python/agentdna/: __init__.py  cli.py  client.py  discovery.py  marketplace.py  models.py  py.typed  registry.py
src/sdk/python/agentdna/plugins/: __init__.py  crewai.py  langchain.py  observe.py
src/sdk/python/agentdna/sandbox/: __init__.py  verifier.py
src/sdk/python/agentdna/trust/: __init__.py  evaluator.py  scorer.py
src/sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
src/sdk/typescript/src/: index.ts
src/trust/: evaluator.py  scorer.py
tests/: test_auth.py  test_models.py  test_plugins.py  test_registry.py  test_sandbox.py  test_trust.py
