[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdna-sdk"
version = "0.3.0"
description = "Sentry for AI Agents — one-line observability with local SQLite persistence"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "mamoor123" },
]
keywords = [
    "ai", "agents", "observability", "monitoring", "decorator",
    "a2a", "mcp", "llm", "openai", "langchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
agentdna = "agentdna.cli:cli"

[project.optional-dependencies]
discovery = [
    "httpx>=0.27.0",
    "PyYAML>=6.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/mamoor123/agentdna"
Documentation = "https://github.com/mamoor123/agentdna#readme"
Repository = "https://github.com/mamoor123/agentdna"
Issues = "https://github.com/mamoor123/agentdna/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentdna"]
